--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 canvas {
   border: 2px solid red;
-  padding: 2px 2px;
-  background: white;
+  padding: 7px 7px;
+  background: #bbb;
 }
 
 canvas:hover {
